--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-dom": "^19.2.1"
   },
   "devDependencies": {
+    "@types/node": "^20.11.24",
     "@types/react": "^19.2.1",
     "@types/react-dom": "^19.2.1",
     "@vitejs/plugin-react": "^4.2.1",
